--- a/examples/difference/difference.tex
+++ b/examples/difference/difference.tex
@@ -10,7 +10,7 @@
 
 \begin{figure}[hp]
 \centering
-\includegraphics[width=\linewidth]{default.png}
+\includegraphics[width=\columnwidth]{default.png}
 \caption{Default matplotlib figure}
 \end{figure}
 
