--- a/examples/matplotlib_default/matplotlib_default.tex
+++ b/examples/matplotlib_default/matplotlib_default.tex
@@ -9,19 +9,19 @@
 \begin{figure*}[hp]
 \centering
 \includegraphics[scale=1,frame]{img.png}
-\caption{Textwidth figure, no scale}
+\caption{Default size, no scale}
 \end{figure*}
 
 \begin{figure*}[hp]
 \centering
 \includegraphics[width=\textwidth,frame]{img.png}
-\caption{Textwidth figure, scaled}
+\caption{Figure scaled to textwidth}
 \end{figure*}
 
 \begin{figure}[hp]
 \centering
-\includegraphics[width=\linewidth,frame]{img.png}
-\caption{Linewidth figure, scaled}
+\includegraphics[width=\columnwidth,frame]{img.png}
+\caption{Figure scaled to columnwidth}
 \end{figure}
 
 \end{document}
