--- a/examples/article_letterpaper_10pt_singlecolumn/article_letterpaper_10pt_singlecolumn.tex
+++ b/examples/article_letterpaper_10pt_singlecolumn/article_letterpaper_10pt_singlecolumn.tex
@@ -14,8 +14,8 @@
 
 \begin{figure}[hp]
 \centering
-\includegraphics[scale=1,frame]{linewidth.png}
-\caption{Linewidth figure}
+\includegraphics[scale=1,frame]{columnwidth.png}
+\caption{Columnwidth figure}
 \end{figure}
 
 \end{document}
